<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".ActivityScanResult">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/head_manual"
        android:textColor="#000000"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:text="Заголовок" />

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:textColor="#000000"
        android:textSize="20sp"
        tools:text="Тут будет полезная информация" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_code_scanner_flash_on" />

        <TextView
            android:id="@+id/tvContent_flash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:gravity="start"
            android:text="@string/content_manual_flash"
            android:textColor="#000000"
            android:textSize="20sp"
            tools:text="  информация о вспышке" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_code_scanner_auto_focus_on" />

        <TextView
            android:id="@+id/tvContent_autofocus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:gravity="start"
            android:text="@string/content_manual_autofocus"
            android:textColor="#000000"
            android:textSize="20sp"
            tools:text=" информация о автофокусе" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvContent2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:text="@string/content_manual_part2"
        android:textColor="#000000"
        android:textSize="20sp"
        tools:text="+ полезная информация" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/icon_note" />

        <TextView
            android:id="@+id/tvContent_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="start"
            android:text="@string/content_manual_note"
            android:textColor="#000000"
            android:textSize="20sp"
            tools:text=" информация о заметке" />
    </LinearLayout>


</LinearLayout>